Implemented logic for top 5 routes and best route higlighting on the map